Fix sdiout layout: show all 4 quads and fix fullscreen regular users visibility
- Fixed Semantic UI Grid layout to properly display 2x2 quads (all 16 rooms)
- Added explicit sizing for .sdi_container, rows, and columns to prevent layout collapse
- Removed padding/margins that were causing columns to wrap incorrectly
- Fixed fullscreen title positioning to use absolute positioning
- Fixed fullscreen .vclient__main-wrapper positioning to show below title (top: 150px)
- Regular users now visible in fullscreen mode below group video
- Ensured proper spacing in fullscreen: title (150px) + content area (930px) = 1080px total

--- a/src/apps/VideoOutApp/VideoOutApp.css
+++ b/src/apps/VideoOutApp/VideoOutApp.css
@@ -6,6 +6,8 @@ body {
 
 .ui.grid {
   margin-top: 0rem;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
   /*margin-bottom: -1rem;*/
   /*margin-left: -1rem;*/
   /*margin-right: -1rem;*/
@@ -14,19 +16,45 @@ body {
 .ui.grid>.row {
   padding-top: 0px;
   padding-bottom: 0rem;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
+
+.ui.grid>.row>.column {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 
 .sdi_container {
-  width: 3840px;
-  height: 2160px;
+  width: 3840px !important;
+  height: 2160px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.sdi_container > .row {
+  width: 3840px !important;
+  height: 1080px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  display: flex !important;
+}
+
+.sdi_container > .row > .column {
+  width: 1920px !important;
+  height: 1080px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  flex: 0 0 1920px !important;
 }
 
 .preview_sdi {
   width: 1920px!important;
   height: 1080px!important;
   background-color: black!important;
-  border: 1px solid black!important;
+  border: none!important;
+  overflow: hidden!important;
 }
 
 .videos-panel {
